# stdc-implementation

./: CMakeLists.txt  LICENSE  README.md
include/itree/: bind.hpp  function.hpp  tuple.hpp
unittest/: unittest_bind.cpp  unittest_function.cpp  unittest_tuple.cpp
